--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 </ng-select>
 
 
-<button type="submit">Submit</button>
+<button type="submit">Submitt</button>
 
 <button [ngClass]="{ 'btn-yellow': true }">Yellow Button</button>
 <button [ngClass]="{'btn-red': true }">Red Button</button>
